@@ -16,8 +16,8 @@ enemyracemanager-max-group-size=Max Group Size [img=info]
 
 enemyracemanager-mapping-method=Enemy Mapping Method [img=info]
 enemyracemanager-2way-group-enemy-orientation=[2 races split] Orientation [img=info]
-enemyracemanager-2way-group-enemy-positive=[2 races split] Race for Negative Axis
-enemyracemanager-2way-group-enemy-negative=[2 races split] Race for Positive Axis
+enemyracemanager-2way-group-enemy-positive=[2 races split] Race for Positive Axis
+enemyracemanager-2way-group-enemy-negative=[2 races split] Race for Negative Axis
 enemyracemanager-2way-group-split-point=[2 races split] Center point for split [img=info]
 
 enemyracemanager-enhance-defense=[Defense] Enhanced Base Game Defenses [img=info]
